WFLY-17440 Eliminate static references to messaging-activemq subsystem ResourceDefinition instances